# tq

./: .gitignore  LICENSE  README.md  pyproject.toml
.reflect/: reflect.db-shm  reflect.db-wal
docs/: ARCHITECTURE.md  PHASES.md  PRD.md  SYSTEM_DESIGN.md  TASK_LIST.md  TECH_DOC.md
tests/: test_api_models.py  test_cli.py  test_cli_start.py  test_config.py  test_coverage_gaps.py  test_download.py  test_hardware.py  test_hardware_and_models.py  test_inference.py  test_recommend_and_turbo.py  test_server_app.py
tests/integration/: test_server_integration.py
tq/cli/: main.py  models.py  recommend.py  start.py  stop_status.py  system.py
tq/core/: config.py  download.py  hardware.py  models.py  recommend.py  turbo.py
tq/data/: model_configs.toml
tq/server/: app.py  inference.py  models.py
